--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="image">
           <img
             id="bottle"
-            src="images/image-product-mobile.jpg"
+            src="image-product-mobile.jpg"
             alt="perfume"
             />
         </div>
